# gooby

./: .gitignore  Cargo.toml  Code of Conduct.md  README.md  build.gradle  example_config.toml  settings.gradle
src/: commands.rs  config.rs  main.rs
src/api/: mod.rs
src/files/: default_triggers.txt
src/main/java/: Main.java  main.java
src/main/java/api/discord/: Categorize.java  Categorizer.java  Commands.java  CommandsHandler.java  EventHandler.java  InteractionListener.java  Listener.java  Main.java  MessageListener.java  Triggers.java  main.java
src/main/java/api/discord/features/: TextualTriggers.java
src/main/java/api/discord/features/commands/: AddTextualTrigger.java
src/main/java/api/discord/helper/: TriggerFileHandler.java  TriggerReader.java
src/main/java/api/google/: Main.java  main.java
src/main/java/api/soundcloud/: Main.java  main.java
src/main/java/api/spotify/: Main.java  main.java
src/main/java/api/youtube/: Main.java  main.java
src/main/java/auth/: OAuthHelper.java  oAuthHelper.java
src/main/java/feat/: Music.java  music.java
