[package]
name = "gooby-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12.1"
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
songbird = "0.4.1"
image = "0.25.1"
async-openai = "0.20.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
